--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
         "apps/*"
     ],
     "scripts": {
-      "dev": "npm-run-all --parallel dev:desktop dev:backend",
-      "dev:desktop": "npm run dev -w apps/desktop",
-      "dev:backend": "python -m uvicorn main:app --app-dir apps/backend --host 127.0.0.1 --port 8000 --reload --reload-dir apps/backend",
-      "lint": "echo \"Linting scripts to be defined\"",
-      "lint:desktop": "npm run lint -w apps/desktop",
-      "lint:backend": "echo \"Backend linting (flake8/ruff) to be defined\"",
-      "test": "echo \"Testing scripts to be defined\"",
-      "test:desktop": "npm run test -w apps/desktop",
-      "test:backend": "echo \"Backend testing (pytest) to be defined\""
-    },
+        "dev": "npm-run-all --parallel dev:desktop dev:backend",
+        "dev:desktop": "npm run dev -w apps/desktop",
+        "dev:backend": "python -m uvicorn main:app --app-dir apps/backend --host 127.0.0.1 --port 8000 --reload --reload-dir apps/backend",
+
+        "build:desktop": "npm run build -w apps/desktop",
+
+        "lint": "npm-run-all --parallel lint:desktop lint:backend",
+        "lint:desktop": "npm run lint -w apps/desktop",
+        "lint:backend": "cd apps/backend && source .venv/bin/activate && ruff check .", 
+
+        "format": "npm-run-all --parallel format:desktop format:backend",
+        "format:desktop": "npm run format -w apps/desktop",
+        "format:backend": "cd apps/backend && source .venv/bin/activate && ruff format .", 
+
+        "test": "echo \"Testing scripts to be defined\"",
+        "test:desktop": "npm run test -w apps/desktop",
+        "test:backend": "echo \"Backend testing (pytest) to be defined\""
+        },
     "devDependencies": {
-        "npm-run-all": "^4.1.5"
+        "@typescript-eslint/eslint-plugin": "^7.18.0",
+        "@typescript-eslint/parser": "^7.18.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.6",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^3.5.3"
     }
 }
