--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -9,10 +9,10 @@
         "dev": "electron-vite dev --watch",
         "build": "npm run typecheck && npm run lint && electron-vite build && electron-builder",
         "typecheck": "tsc --noEmit",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives", 
-        "format": "prettier --write \"./src/**/*.{ts,tsx,css,html}\" \"./*.{ts,js,cjs}\" --log-level warn", 
-        "test": "echo \"Vitest tests to be defined\""
-        },
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+        "format": "prettier --write \"./src/**/*.{ts,tsx,css,html}\" \"./*.{ts,js,cjs}\" --log-level warn",
+        "test": "vitest run --coverage"
+    },
     "dependencies": {
         "electron-updater": "^6.1.8",
         "react": "^18.2.0",
@@ -21,9 +21,13 @@
     },
     "devDependencies": {
         "@electron-toolkit/utils": "^4.0.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/coverage-v8": "^3.1.2",
         "autoprefixer": "^10.4.19",
         "electron": "^29.3.0",
         "electron-builder": "^24.13.3",
@@ -31,9 +35,11 @@
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "jsdom": "^26.1.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.4.5",
+        "vitest": "^3.1.2",
         "zustand": "^4.5.2"
     }
 }
