--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "dev": "npm-run-all --parallel dev:desktop dev:backend",
         "dev:desktop": "npm run dev -w apps/desktop",
-        "dev:backend": "python -m uvicorn main:app --app-dir apps/backend --host 127.0.0.1 --port 8000 --reload --reload-dir apps/backend",
+        "dev:backend": "python -m uvicorn main:app --app-dir apps/backend --host 127.0.0.1 --port 8000",
 
         "build:desktop": "npm run build -w apps/desktop",
 
